Pew! There's a lot:  - added Font_awesome  - finished blurry  - implemented background  - added Sociallinks  - fixed mobile

--- a/assets/css/Pusher.css
+++ b/assets/css/Pusher.css
@@ -10,6 +10,12 @@
   clear: both;
 }
 
+.Push-15 {
+  height: 15vh;
+  display: block;
+  clear: both;
+}
+
 .Push-30 {
   height: 30vh;
   display: block;
