--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,3 @@
-.bg-success.d-flex.align-items-center {
-}
+
+
 
